--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "chart.js": "^3.3.2",
+    "chart.js": "^3.4.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "material-ui-popup-state": "^1.8.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
