--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "node postbuild.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
