--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slurm-status-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/static",
+  "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
